# rag-experiments

./: postCreateCommand.sh
.devcontainer/: devcontainer.json
backend/: .gitignore  containers.py  main.py  pyproject.toml  todo.md
backend/adapters/event_bus/: in_memory_event_bus.py
backend/adapters/event_bus/services/: dropbox_oauth_service.py  google_drive_document_service.py  google_oauth_service.py
backend/adapters/event_dispatchers/: redis_event_dispatcher.py
backend/adapters/services/: dropbox_document_service.py
backend/application/events/: event.py  user_document_accessed.py  user_oauth_completed.py
backend/application/handlers/: oauth_events_handler.py  user_access_document_events_handler.py
backend/application/interfaces/: document_service.py  event_bus.py  oauth_service.py
backend/application/use_cases/: handle_document_source_authentication.py
backend/domain/: value_objects.py
backend/domain/models/: User.py
backend/framework/: event_dispatcher.py  event_handler.py
backend/framework/events/: event.py
backend/root/api/: auth_router.py
backend/tests/manual/: manual_testing.py
